--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -53,7 +53,7 @@ COPY pyproject.toml /backend/pyproject.toml
 COPY poetry.lock /backend/poetry.lock
 
 RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
-
+ENV PATH="/root/.local/bin:$PATH"
 RUN poetry install
 
 COPY --from=nsjail /nsjail/nsjail /bin/nsjail
