--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -25,7 +25,7 @@ jobs:
           python-version: 3.9
       - name: Install Poetry
         uses: snok/install-poetry@v1
-      - run: cd backend && poetry install && poetry shell
+      - run: cd backend && poetry install
       - uses: tsuyoshicho/action-mypy@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -108,7 +108,8 @@ jobs:
       - run: cd backend && poetry install
       - name: Run tests
         run: |-
-          poetry run backend/manage.py test backend
+          cd backend
+          poetry run manage.py test
         env:
           SYSTEM_ENV: GITHUB_WORKFLOW
 
