--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,33 +5,6 @@ on:
       - main
   pull_request:
 jobs:
-  reviewdog:
-    name: reviewdog
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: reviewdog/action-setup@v1
-      - run: cd frontend && yarn
-      - run: reviewdog -reporter=github-check
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  mypy:
-    name: mypy
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v1
-        with:
-          python-version: 3.9
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-      - run: cd backend && poetry install
-      - uses: tsuyoshicho/action-mypy@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          reporter: github-check
-          workdir: backend
-
   backend_test:
     name: backend tests
     runs-on: ubuntu-latest
@@ -99,6 +72,9 @@ jobs:
   backend_test_windows:
     name: backend tests (windows)
     runs-on: windows-latest
+    defaults:
+      run:
+        shell: bash
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
@@ -135,7 +111,7 @@ jobs:
             --entrypoint /bin/bash \
             -e COMPILER_BASE_PATH=/compilers \
             -e WINEPREFIX=/tmp/wine \
-            decompme_backend -c 'cd /decomp.me/backend && poetry run python manage.py test'
+            decompme_backend -c 'cd /decomp.me/backend && export PATH="/root/.local/bin:$PATH" && poetry run python manage.py test'
 
   frontend_test:
     name: frontend tests
@@ -151,3 +127,30 @@ jobs:
         name: Install dependencies
       - run: cd frontend && yarn test:ci
         name: Run tests
+
+  reviewdog:
+    name: reviewdog
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: reviewdog/action-setup@v1
+      - run: cd frontend && yarn
+      - run: reviewdog -reporter=github-check
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  mypy:
+    name: mypy
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+      - run: cd backend && poetry install
+      - uses: tsuyoshicho/action-mypy@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          reporter: github-check
+          workdir: backend
