--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -112,7 +112,7 @@ jobs:
             --entrypoint /bin/bash \
             -e COMPILER_BASE_PATH=/compilers \
             -e WINEPREFIX=/tmp/wine \
-            decompme_backend -c 'cd /decomp.me/backend && export PATH="/root/.local/bin:$PATH" && poetry run python manage.py test'
+            decompme_backend -c 'cd /decomp.me/backend && python manage.py test'
 
   frontend_test:
     name: frontend tests
