--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,7 +29,11 @@ jwt = "^1.3.1"
 PyGithub = "^1.55"
 
 [tool.poetry.dev-dependencies]
+black = "^22.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+extend-exclude = '^/(mips_to_c|asm_differ)/'
