--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -81,16 +81,12 @@ jobs:
         with:
           python-version: 3.9
       - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
+        run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
       - run: cd backend && poetry install --no-interaction
       - name: Run tests
         run: |-
-          source $VENV
           cd backend
-          python3 manage.py test
+          poetry run python manage.py test
         env:
           SYSTEM_ENV: GITHUB_WORKFLOW
 
