--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,7 @@ types-requests = "^2.27.10"
 watchdog = "^2.1.6"
 jwt = "^1.3.1"
 PyGithub = "^1.55"
+drf-extensions = "^0.7.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
