--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -82,7 +82,7 @@ jobs:
           python-version: 3.9
       - name: Install Poetry
         run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
-      - run: cd backend && %USERPROFILE%\.poetry\bin\poetry install --no-interaction
+      - run: cd backend && %USERPROFILE%\.poetry\bin\poetry install
       - name: Run tests
         run: |-
           cd backend
