use pip to install poetry on winders

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -81,12 +81,12 @@ jobs:
         with:
           python-version: 3.9
       - name: Install Poetry
-        run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
-      - run: cd backend && %USERPROFILE%\.poetry\bin\poetry install
+        run: pip install --user poetry
+      - run: cd backend && poetry install
       - name: Run tests
         run: |-
           cd backend
-          %USERPROFILE%\.poetry\bin\poetry run python manage.py test
+          poetry run python manage.py test
         env:
           SYSTEM_ENV: GITHUB_WORKFLOW
 
