--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,8 @@
         "editor.defaultFormatter": "vscode.json-language-features",
         "editor.formatOnSave": true,
     },
-    "editor.formatOnSave": true,
+    "[python]": {
+        "editor.formatOnSave": true,
+    },
     "python.formatting.provider": "black",
 }
