--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
     "files.trimTrailingWhitespace": true,
-
     // eslint
     "eslint.workingDirectories": [
         "frontend"
@@ -22,7 +21,6 @@
         "editor.defaultFormatter": "dbaeumer.vscode-eslint",
         "editor.formatOnSave": true,
     },
-
     // stylelint
     "[css]": {
         "editor.defaultFormatter": "stylelint.vscode-stylelint",
@@ -32,9 +30,12 @@
         "editor.defaultFormatter": "stylelint.vscode-stylelint",
         "editor.formatOnSave": true,
     },
-
     "[json]": {
         "editor.defaultFormatter": "vscode.json-language-features",
         "editor.formatOnSave": true,
     },
+    "[python]": {
+        "editor.formatOnSave": true,
+    },
+    "python.formatting.provider": "black",
 }
