--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -37,4 +37,4 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
-extend-exclude = '^/(mips_to_c|asm_differ)/'
+extend-exclude = '^/(mips_to_c|asm_differ|local_files)/'
