--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -153,10 +153,10 @@ jobs:
           python-version: 3.9
       - name: Install Poetry
         uses: snok/install-poetry@v1
-      - run: |
-        cd backend
-        poetry install
-        poetry run mypy
+      - run: |-
+          cd backend
+          poetry install
+          poetry run mypy
   black:
     name: black
     runs-on: ubuntu-latest
