--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -153,12 +153,10 @@ jobs:
           python-version: 3.9
       - name: Install Poetry
         uses: snok/install-poetry@v1
-      - run: cd backend && poetry install
-      - uses: tsuyoshicho/action-mypy@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          reporter: github-check
-          workdir: backend
+      - run: |-
+          cd backend
+          poetry install
+          poetry run mypy
   black:
     name: black
     runs-on: ubuntu-latest
