update eslint no-multiple-empty-lines rule

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -22,7 +22,7 @@
         "no-else-return": "off",
         "no-trailing-spaces": "error",
         "no-multi-spaces": "error",
-        "no-multiple-empty-lines": "error",
+        "no-multiple-empty-lines": ["error", { "max": 1, "maxBOF": 0, "maxEOF": 0 }],
         "comma-dangle": "off",
         "@typescript-eslint/comma-dangle": ["error", "always-multiline"],
         "comma-spacing": "off",
