update Next.js & React
Resolves #358.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,12 +22,12 @@
         "framer-motion": "^4.1.17",
         "is-mobile": "^3.0.0",
         "monaco-editor": "^0.29.1",
-        "next": "^11.1.2",
+        "next": "12",
         "next-plausible": "^3.1.4",
         "next-pwa": "^5.3.1",
-        "react": "^18.0.0-alpha-fd5e01c2e-20210913",
+        "react": "^17.0.2",
         "react-contenteditable": "^3.3.6",
-        "react-dom": "^18.0.0-alpha-fd5e01c2e-20210913",
+        "react-dom": "^17.0.2",
         "react-hot-toast": "^2.1.0",
         "react-laag": "^2.0.3",
         "react-modal": "^3.14.4",
