--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,7 +31,7 @@ services:
       ALLOWED_HOSTS: "backend,localhost,127.0.0.1"
       USE_SANDBOX_JAIL: "on"
       COMPILER_BASE_PATH: /compilers
-      LOCAL_FILE_DIRL: /local_files
+      LOCAL_FILE_DIR: /local_files
     ports:
     - "8000:8000"
     security_opt:
