--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -31,6 +31,7 @@ drf-extensions = "^0.7.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
+usort = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
