--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,7 @@ watchdog = "^2.1.6"
 jwt = "^1.3.1"
 PyGithub = "^1.55"
 drf-extensions = "^0.7.1"
+tqdm = "^4.62.3"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
