--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,10 +13,13 @@ services:
     build:
       context: backend
       args:
+        ENABLE_GBA_SUPPORT: "YES"
+        ENABLE_N64_SUPPORT: "YES"
         # dont install wine32 etc by default
-        ENABLE_PS1_SUPPORT: "NO"
-        ENABLE_GC_WII_SUPPORT: "NO"
         ENABLE_NDS_SUPPORT: "NO"
+        ENABLE_PS1_SUPPORT: "NO"
+        ENABLE_WII_GC_SUPPORT: "NO"
+        # dont install clang by default
         ENABLE_SWITCH_SUPPORT: "NO"
     cap_drop:
       - all
