--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
         "next": "^11.1.2",
         "next-plausible": "^3.1.4",
         "next-pwa": "^5.3.1",
+        "next-translate": "^1.3.5",
         "react": "^18.0.0-alpha-fd5e01c2e-20210913",
         "react-contenteditable": "^3.3.6",
         "react-dom": "^18.0.0-alpha-fd5e01c2e-20210913",
