--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     },
     "dependencies": {
         "@badrap/bar-of-progress": "^0.1.2",
-        "@primer/octicons-react": "^16.3.1",
+        "@primer/octicons-react": "^17.0.0",
         "@react-hook/resize-observer": "^1.2.2",
         "ansi-to-react": "^6.1.6",
         "classnames": "^2.3.1",
@@ -22,13 +22,13 @@
         "framer-motion": "^4.1.17",
         "is-mobile": "^3.0.0",
         "monaco-editor": "^0.29.1",
-        "next": "^11.1.2",
-        "next-plausible": "^3.1.4",
+        "next": "12",
+        "next-plausible": "^3.1.6",
         "next-pwa": "^5.3.1",
         "next-translate": "^1.3.5",
-        "react": "^18.0.0-alpha-fd5e01c2e-20210913",
+        "react": "^18.0.0-rc.2",
         "react-contenteditable": "^3.3.6",
-        "react-dom": "^18.0.0-alpha-fd5e01c2e-20210913",
+        "react-dom": "^18.0.0-rc.2",
         "react-hot-toast": "^2.1.0",
         "react-laag": "^2.0.3",
         "react-modal": "^3.14.4",
@@ -43,15 +43,15 @@
     "devDependencies": {
         "@babel/core": "^7.15.8",
         "@next/eslint-plugin-next": "^11.1.2",
-        "@storybook/addon-actions": "^6.3.10",
-        "@storybook/addon-essentials": "^6.3.10",
-        "@storybook/addon-links": "^6.3.10",
+        "@storybook/addon-actions": "^6.4.19",
+        "@storybook/addon-essentials": "^6.4.19",
+        "@storybook/addon-links": "^6.4.19",
         "@storybook/addon-postcss": "^2.0.0",
-        "@storybook/addon-viewport": "^6.3.10",
-        "@storybook/builder-webpack5": "^6.3.10",
-        "@storybook/manager-webpack5": "^6.3.10",
+        "@storybook/addon-viewport": "^6.4.19",
+        "@storybook/builder-webpack5": "^6.4.19",
+        "@storybook/manager-webpack5": "^6.4.19",
         "@storybook/preset-scss": "^1.0.3",
-        "@storybook/react": "^6.3.10",
+        "@storybook/react": "^6.4.19",
         "@svgr/webpack": "^5.5.0",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^13.0.0-alpha.1",
@@ -82,12 +82,12 @@
         "postcss-scrollbar": "^0.3.0",
         "react-test-renderer": "^17.0.2",
         "sass-loader": "^12.1.0",
-        "storybook-dark-mode": "^1.0.8",
+        "storybook-dark-mode": "^1.0.9",
         "style-loader": "^3.3.0",
         "stylelint": "^13.13.1",
         "stylelint-config-css-modules": "^2.2.0",
         "stylelint-config-standard": "^22.0.0",
-        "typescript": "^4.4.2",
-        "webpack": "5"
+        "typescript": "^4.6.2",
+        "webpack": "^5.70.0"
     }
 }
