--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,8 +15,7 @@
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "incremental": true
+    "isolatedModules": true
   },
   "include": [
     "next-env.d.ts",
