--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,9 +27,9 @@
         "next-plausible": "^3.1.4",
         "next-pwa": "^5.3.1",
         "next-translate": "^1.3.5",
-        "react": "^18.0.0-alpha-fd5e01c2e-20210913",
+        "react": "^18.0.0-rc.3",
         "react-contenteditable": "^3.3.6",
-        "react-dom": "^17.0.2",
+        "react-dom": "^18.0.0-rc.3",
         "react-hot-toast": "^2.1.0",
         "react-laag": "^2.0.3",
         "react-modal": "^3.14.4",
@@ -42,7 +42,7 @@
         "use-persisted-state": "^0.3.3"
     },
     "devDependencies": {
-        "@babel/core": "^7.15.8",
+        "@babel/core": "^7.17.8",
         "@next/eslint-plugin-next": "^11.1.2",
         "@storybook/addon-actions": "^6.3.10",
         "@storybook/addon-essentials": "^6.3.10",
@@ -54,15 +54,15 @@
         "@storybook/preset-scss": "^1.0.3",
         "@storybook/react": "^6.3.10",
         "@svgr/webpack": "^5.5.0",
-        "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^13.0.0-alpha.1",
-        "@testing-library/user-event": "^13.4.1",
+        "@testing-library/jest-dom": "^5.16.3",
+        "@testing-library/react": "^13.0.0-alpha.6",
+        "@testing-library/user-event": "^13.5.0",
         "@types/react-modal": "^3.13.1",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
         "autoprefixer": "^10.3.1",
-        "babel-jest": "^27.2.5",
-        "babel-loader": "^8.2.2",
+        "babel-jest": "^27.5.1",
+        "babel-loader": "^8.2.4",
         "css-loader": "^6.4.0",
         "cssnano": "^5.0.7",
         "dotenv": "^10.0.0",
@@ -72,9 +72,9 @@
         "eslint-plugin-css-modules": "^2.11.0",
         "eslint-plugin-react": "^7.26.1",
         "eslint-plugin-react-hooks": "^4.2.0",
-        "eslint-plugin-testing-library": "^4.12.4",
+        "eslint-plugin-testing-library": "^5.1.0",
         "identity-obj-proxy": "^3.0.0",
-        "jest": "^27.2.5",
+        "jest": "^27.5.1",
         "jest-transform-stub": "^2.0.0",
         "next-remove-imports": "^1.0.6",
         "postcss": "^8.3.6",
