--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,9 +27,9 @@
         "next-plausible": "^3.1.4",
         "next-pwa": "^5.3.1",
         "next-translate": "^1.3.5",
-        "react": "^18.0.0-rc.3",
+        "react": "^18.0.0",
         "react-contenteditable": "^3.3.6",
-        "react-dom": "^18.0.0-rc.3",
+        "react-dom": "^18.0.0",
         "react-hot-toast": "^2.1.0",
         "react-laag": "^2.0.3",
         "react-modal": "^3.14.4",
