--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,16 +14,12 @@ cxxfilt = "^0.3.0"
 django-cors-headers = "^3.11.0"
 django-environ = "^0.8.1"
 django-filter = "^21.1"
-django-stubs = "^1.9.0"
-django-stubs-ext = "^0.3.1"
 djangorestframework = "^3.13.1"
-djangorestframework-stubs = "^1.4.0"
 mypy = "^0.931"
 psycopg2-binary = "^2.9.3"
 pycparser = "^2.21"
 python-Levenshtein = "^0.12.2"
 responses = "^0.18.0"
-types-requests = "^2.27.10"
 watchdog = "^2.1.6"
 jwt = "^1.3.1"
 PyGithub = "^1.55"
@@ -33,6 +29,10 @@ tqdm = "^4.62.3"
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
 usort = "^1.0.1"
+django-stubs-ext = "^0.4.0"
+django-stubs = "1.9.0"
+djangorestframework-stubs = "^1.4.0"
+types-requests = "^2.27.15"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
