use react-window for diff

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,8 @@
         "react-modal": "^3.14.4",
         "react-simple-resizer": "^2.1.0",
         "react-timeago": "^6.2.1",
+        "react-virtualized-auto-sizer": "^1.0.6",
+        "react-window": "^1.8.6",
         "sass": "^1.42.1",
         "swr": "^1.2.1",
         "use-debounce": "^7.0.0",
@@ -58,6 +60,8 @@
         "@testing-library/react": "^13.0.0-alpha.6",
         "@testing-library/user-event": "^13.5.0",
         "@types/react-modal": "^3.13.1",
+        "@types/react-virtualized-auto-sizer": "^1.0.1",
+        "@types/react-window": "^1.8.5",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
         "autoprefixer": "^10.3.1",
