--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     },
     "dependencies": {
         "@badrap/bar-of-progress": "^0.1.2",
+        "@codemirror/basic-setup": "^0.19.1",
+        "@codemirror/lang-cpp": "^0.19.1",
         "@primer/octicons-react": "^16.3.1",
         "@react-hook/resize-observer": "^1.2.2",
         "ansi-to-react": "^6.1.6",
@@ -21,19 +23,20 @@
         "downshift": "^6.1.7",
         "framer-motion": "^4.1.17",
         "is-mobile": "^3.0.0",
-        "monaco-editor": "^0.29.1",
-        "next": "^11.1.2",
+        "next": "12",
         "next-plausible": "^3.1.4",
         "next-pwa": "^5.3.1",
         "next-translate": "^1.3.5",
-        "react": "^18.0.0-alpha-fd5e01c2e-20210913",
+        "react": "^18.0.0",
         "react-contenteditable": "^3.3.6",
-        "react-dom": "^18.0.0-alpha-fd5e01c2e-20210913",
+        "react-dom": "^18.0.0",
         "react-hot-toast": "^2.1.0",
         "react-laag": "^2.0.3",
         "react-modal": "^3.14.4",
         "react-simple-resizer": "^2.1.0",
         "react-timeago": "^6.2.1",
+        "react-virtualized-auto-sizer": "^1.0.6",
+        "react-window": "^1.8.6",
         "sass": "^1.42.1",
         "swr": "^1.2.1",
         "use-debounce": "^7.0.0",
@@ -41,7 +44,7 @@
         "use-persisted-state": "^0.3.3"
     },
     "devDependencies": {
-        "@babel/core": "^7.15.8",
+        "@babel/core": "^7.17.8",
         "@next/eslint-plugin-next": "^11.1.2",
         "@storybook/addon-actions": "^6.3.10",
         "@storybook/addon-essentials": "^6.3.10",
@@ -53,15 +56,17 @@
         "@storybook/preset-scss": "^1.0.3",
         "@storybook/react": "^6.3.10",
         "@svgr/webpack": "^5.5.0",
-        "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^13.0.0-alpha.1",
-        "@testing-library/user-event": "^13.4.1",
+        "@testing-library/jest-dom": "^5.16.3",
+        "@testing-library/react": "^13.0.0-alpha.6",
+        "@testing-library/user-event": "^13.5.0",
         "@types/react-modal": "^3.13.1",
+        "@types/react-virtualized-auto-sizer": "^1.0.1",
+        "@types/react-window": "^1.8.5",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
         "autoprefixer": "^10.3.1",
-        "babel-jest": "^27.2.5",
-        "babel-loader": "^8.2.2",
+        "babel-jest": "^27.5.1",
+        "babel-loader": "^8.2.4",
         "css-loader": "^6.4.0",
         "cssnano": "^5.0.7",
         "dotenv": "^10.0.0",
@@ -71,11 +76,10 @@
         "eslint-plugin-css-modules": "^2.11.0",
         "eslint-plugin-react": "^7.26.1",
         "eslint-plugin-react-hooks": "^4.2.0",
-        "eslint-plugin-testing-library": "^4.12.4",
+        "eslint-plugin-testing-library": "^5.1.0",
         "identity-obj-proxy": "^3.0.0",
-        "jest": "^27.2.5",
+        "jest": "^27.5.1",
         "jest-transform-stub": "^2.0.0",
-        "monaco-editor-webpack-plugin": "^5.0.0",
         "next-remove-imports": "^1.0.6",
         "postcss": "^8.3.6",
         "postcss-loader": "^6.1.1",
