--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,15 +22,13 @@
         "dequal": "^2.0.2",
         "downshift": "^6.1.7",
         "framer-motion": "^4.1.17",
-        "is-mobile": "^3.0.0",
-        "next": "12",
+        "next": "^12.1.4",
         "next-plausible": "^3.1.4",
         "next-pwa": "^5.3.1",
         "next-translate": "^1.3.5",
         "react": "^18.0.0",
         "react-contenteditable": "^3.3.6",
         "react-dom": "^18.0.0",
-        "react-hot-toast": "^2.1.0",
         "react-laag": "^2.0.3",
         "react-modal": "^3.14.4",
         "react-simple-resizer": "^2.1.0",
