--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
         "@codemirror/lang-cpp": "^0.19.1",
         "@primer/octicons-react": "^16.3.1",
         "@react-hook/resize-observer": "^1.2.2",
+        "@replit/codemirror-indentation-markers": "^0.19.1",
         "ansi-to-react": "^6.1.6",
         "classnames": "^2.3.1",
         "dequal": "^2.0.2",
