--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "decomp.me",
     "short_name": "decomp.me",
-    "description": "Decompile code in the browser",
+    "description": "Decompile code",
     "theme_color": "#951fd9",
     "background_color": "#292f33",
     "display": "minimal-ui",
@@ -10,13 +10,15 @@
     "start_url": "/",
     "icons": [
         {
-            "src": "purplefrog.svg",
-            "sizes": "48x48 320x320",
-            "purpose": "monochrome"
+            "src": "purplefrog-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "any monochrome"
         },
         {
-            "src": "purplefrog-bg.svg",
-            "sizes": "48x48 320x320",
+            "src": "purplefrog-bg-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
             "purpose": "maskable"
         }
     ]
