--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,6 +69,7 @@
         "eslint-plugin-testing-library": "^5.1.0",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^28.1.0",
+        "jest-environment-jsdom": "^28.1.0",
         "jest-transform-stub": "^2.0.0",
         "next-remove-imports": "^1.0.6",
         "postcss": "^8.3.6",
