remove frontend tests

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,7 @@
         "build": "next build",
         "start": "next start --port 8080",
         "lint": "next lint && yarn stylelint 'src/**/*.css' 'src/**/*.scss'",
-        "postinstall": "next telemetry disable",
-        "test": "jest --watch",
-        "test:ci": "jest --ci"
+        "postinstall": "next telemetry disable"
     },
     "dependencies": {
         "@badrap/bar-of-progress": "^0.2.1",
@@ -46,16 +44,12 @@
         "@babel/core": "^7.17.8",
         "@next/eslint-plugin-next": "^12.1.6",
         "@svgr/webpack": "^6.2.1",
-        "@testing-library/jest-dom": "^5.16.3",
-        "@testing-library/react": "^13.0.0-alpha.6",
-        "@testing-library/user-event": "^14.2.0",
         "@types/react-modal": "^3.13.1",
         "@types/react-virtualized-auto-sizer": "^1.0.1",
         "@types/react-window": "^1.8.5",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
         "autoprefixer": "^10.3.1",
-        "babel-jest": "^28.1.0",
         "babel-loader": "^8.2.4",
         "css-loader": "^6.4.0",
         "cssnano": "^5.0.7",
@@ -68,13 +62,9 @@
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-plugin-testing-library": "^5.1.0",
         "identity-obj-proxy": "^3.0.0",
-        "jest": "^28.1.0",
-        "jest-environment-jsdom": "^28.1.0",
-        "jest-transform-stub": "^2.0.0",
         "next-remove-imports": "^1.0.6",
         "postcss": "^8.3.6",
         "postcss-loader": "^7.0.0",
-        "react-test-renderer": "^18.0.0",
         "sass-loader": "^13.0.0",
         "style-loader": "^3.3.0",
         "stylelint": "^13.13.1",
