Make mypy happy

--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -19,6 +19,7 @@ warn_unused_configs = True
 warn_unreachable = True
 warn_no_return = True
 namespace_packages = True
+disallow_untyped_defs = True
 
 files =
     coreapp/**/*.py,
