--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:21.04 as base
+FROM ubuntu:22.04 as base
 
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -6,7 +6,7 @@ RUN apt-get update && apt-get install -y \
     python3-pip \
     python3 \
     python-is-python3 \
-    python3.9-venv
+    python3-venv
 
 
 FROM base AS nsjail
@@ -33,29 +33,31 @@ RUN git clone "https://github.com/google/nsjail" --recursive --branch 3.1 /nsjai
 FROM base AS build
 
 RUN apt-get -y update && apt-get install -y \
+    binutils-aarch64-linux-gnu \
     binutils-mips-linux-gnu \
     binutils-powerpc-linux-gnu \
-    binutils-aarch64-linux-gnu \
     curl \
+    dos2unix \
     gcc-mips-linux-gnu \
+    libc6-dev-i386 \
     libnl-route-3-200 \
     libprotobuf-dev \
+    libtinfo5 \
     netcat \
     unzip \
     wget \
-    libtinfo5 \
-    libc6-dev-i386 \
     && rm -rf /var/lib/apt/lists/*
+
+RUN dpkg --add-architecture i386 && apt-get update \
+    && apt-get install -y --no-install-recommends -o APT::Immediate-Configure=false \
+      libstdc++6:i386
 
 RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | \
   POETRY_VERSION=1.1.13 POETRY_HOME=/etc/poetry python -
 
 COPY --from=nsjail /nsjail/nsjail /bin/nsjail
 
-# ps1 specifics
-RUN if [ "${ENABLE_PS1_SUPPORT}" = "YES" ] ; then \
-    apt-get install -y dos2unix; \
-    fi
+COPY --from=ghcr.io/decompals/wibo:0.1.0 /usr/local/sbin/wibo /usr/bin/
 
 # gc/wii specifics
 COPY --from=devkitpro/devkitppc:20210726 /opt/devkitpro/devkitPPC/bin/powerpc* /usr/bin/
@@ -68,14 +70,17 @@ COPY compilers/download.py /compilers/
 
 ARG ENABLE_GBA_SUPPORT
 ARG ENABLE_N64_SUPPORT
+ARG ENABLE_NDS_SUPPORT
+ARG ENABLE_PS1_SUPPORT
 ARG ENABLE_SWITCH_SUPPORT
+ARG ENABLE_WII_GC_SUPPORT
 
 ENV ENABLE_GBA_SUPPORT=${ENABLE_GBA_SUPPORT}
-ENV ENABLE_WII_GC_SUPPORT=${ENABLE_WII_GC_SUPPORT}
 ENV ENABLE_N64_SUPPORT=${ENABLE_N64_SUPPORT}
 ENV ENABLE_NDS_SUPPORT=${ENABLE_NDS_SUPPORT}
 ENV ENABLE_PS1_SUPPORT=${ENABLE_PS1_SUPPORT}
 ENV ENABLE_SWITCH_SUPPORT=${ENABLE_SWITCH_SUPPORT}
+ENV ENABLE_WII_GC_SUPPORT=${ENABLE_WII_GC_SUPPORT}
 
 RUN pip install requests tqdm && python3 /compilers/download.py && rm -rf /compilers/download_cache/
 
