--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,10 +103,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build decompme_backend image
         run: |-
-          docker build backend \
-            -t decompme_backend \
-            --build-arg ENABLE_WII_GC_SUPPORT=YES \
-            --build-arg ENABLE_PS1_SUPPORT=YES
+          docker build backend -t decompme_backend
       - name: Run tests
         run: |-
           mkdir -p sandbox && chmod 777 sandbox
