--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
       - run: cd backend && poetry install
-      - name: Add i386 architecture and install dependencies
+      - name: Install dependencies
         run: |-
           sudo apt -qq update
           sudo apt-get install \
@@ -55,7 +55,7 @@ jobs:
           sudo mv bin/arm* /usr/bin/
       - name: Install wibo
         run: |-
-          wget https://github.com/decompals/WiBo/releases/download/0.2.1/wibo && chmod +x wibo && sudo cp wibo /usr/bin/
+          wget https://github.com/decompals/WiBo/releases/download/0.2.3/wibo && chmod +x wibo && sudo cp wibo /usr/bin/
       - name: Run backend tests
         run: |-
           cd backend
