Revert "Replace wine with wibo (#484)"
This reverts commit e67c36d5a7ff662f80bb041095ffb1bbc155c827.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,9 +15,10 @@ services:
       args:
         ENABLE_GBA_SUPPORT: "YES"
         ENABLE_N64_SUPPORT: "YES"
-        ENABLE_NDS_SUPPORT: "YES"
-        ENABLE_PS1_SUPPORT: "YES"
-        ENABLE_WII_GC_SUPPORT: "YES"
+        # dont install wine32 etc by default
+        ENABLE_NDS_SUPPORT: "NO"
+        ENABLE_PS1_SUPPORT: "NO"
+        ENABLE_WII_GC_SUPPORT: "NO"
         # dont install clang by default
         ENABLE_SWITCH_SUPPORT: "NO"
     cap_drop:
