--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,7 @@ jwt = "^1.3.1"
 PyGithub = "^1.55"
 drf-extensions = "^0.7.1"
 tqdm = "^4.62.3"
+tzdata = "^2022.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
