--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -34,6 +34,7 @@ django-stubs-ext = "^0.4.0"
 django-stubs = "1.9.0"
 djangorestframework-stubs = "^1.4.0"
 types-requests = "^2.27.15"
+parameterized = "^0.8.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
