Ensure nsjail is enabled in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,7 @@ jobs:
         env:
           SYSTEM_ENV: GITHUB_WORKFLOW
           WINEPREFIX: /tmp/wine
+          USE_SANDBOX_JAIL: on
 
       - name: Migrate backend
         run: cd backend && poetry run python3 ./manage.py migrate
@@ -143,6 +144,7 @@ jobs:
             -e COMPILER_BASE_PATH=/compilers \
             -e WINEPREFIX=/tmp/wine \
             -e LOCAL_FILE_DIR=/local_files \
+            -e USE_SANDBOX_JAIL=on \
             decompme_backend -c 'cd /decomp.me/backend && \
             poetry install && \
             poetry run python manage.py test'
