--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,13 @@
         "dequal": "^2.0.2",
         "downshift": "^6.1.7",
         "framer-motion": "^6.3.5",
+        "is-dark-color": "^1.2.0",
         "next": "^12.1.6",
         "next-plausible": "^3.1.4",
         "next-pwa": "^5.3.1",
         "next-translate": "^1.3.5",
         "react": "^18.0.0",
+        "react-colorful": "^5.6.1",
         "react-contenteditable": "^3.3.6",
         "react-dom": "^18.0.0",
         "react-laag": "^2.0.4",
