diff decompilation against source code

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "ansi-to-react": "^6.1.6",
         "classnames": "^2.3.1",
         "dequal": "^2.0.2",
+        "diff": "^5.1.0",
         "downshift": "^6.1.7",
         "framer-motion": "^6.3.5",
         "is-dark-color": "^1.2.0",
@@ -45,6 +46,7 @@
         "@babel/core": "^7.17.8",
         "@next/eslint-plugin-next": "^12.1.6",
         "@svgr/webpack": "^6.2.1",
+        "@types/diff": "^5.0.2",
         "@types/react-modal": "^3.13.1",
         "@types/react-virtualized-auto-sizer": "^1.0.1",
         "@types/react-window": "^1.8.5",
