update eslint for next.config.js

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -96,6 +96,13 @@
             "rules": {
                 "import/exports-last": "off"
             }
+        },
+        {
+            "files": ["next.config.js"],
+            "rules": {
+                "@typescript-eslint/no-var-requires": "off",
+                "import/order": "off"
+            }
         }
     ]
 }
