Frontend performance/accessiblity tweaks (#539)
* update eslint for next.config.js

* add webpack-bundle-analyzer

* use next/future/image

* improve text contrast in various places

* render scratch page on server

* fix username color on user page

* add title to commit hash

* fix apple-touch-icon

* remove user-scalable=no

* oops

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -51,6 +51,16 @@
             },
             "multilineDetection": "brackets"
         }],
+        "no-restricted-imports": [
+            "error", {
+                "paths": [
+                    {
+                        "name": "next/image",
+                        "message": "Use next/future/image instead."
+                    }
+                ]
+            }
+        ],
         "import/newline-after-import": "error",
         "import/no-duplicates": "error",
         "import/first": "error",
@@ -72,7 +82,7 @@
                         "position": "after"
                     },
                     {
-                        "pattern": "next/*",
+                        "pattern": "next/**",
                         "group": "builtin",
                         "position": "after"
                     }
@@ -95,6 +105,13 @@
             "files": ["*.stories.tsx"],
             "rules": {
                 "import/exports-last": "off"
+            }
+        },
+        {
+            "files": ["next.config.js"],
+            "rules": {
+                "@typescript-eslint/no-var-requires": "off",
+                "import/order": "off"
             }
         }
     ]
